--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,11 +3,11 @@
     %h1= link_to t(".title.peergroup", :default => "peergroup"), root_path
     %h2= title
     .locales
-      - I18n.available_locales.each do |locale|
+      - ["en", "de"].each do |locale|
         = link_to locale, switch_locale_url(locale)
   %nav
-    = t(".title.welcome", :default => "Welcome ") if signed_in? 
-    = t(".title.user_name", :default => "%{user_name}", :user_name => current_user.name) if signed_in? 
+    = t(".title.welcome", :default => "Welcome ") if signed_in?
+    = t(".title.user_name", :default => "%{user_name}", :user_name => current_user.name) if signed_in?
     %ul
       %li= link_to t(".links.home", :default => "Home"), root_path
       - if signed_in?
