--- a/app/stylesheets/partials/_supervision.sass
+++ b/app/stylesheets/partials/_supervision.sass
@@ -102,10 +102,12 @@
         +border-right-radius(5px)
         padding-right: 1em
       input[type=submit]
+        font-size: 12px
         border: none
         background: transparent
         margin: 0
         padding: 0
+        cursor: pointer
 
 .supervision
   > aside
