--- a/app/views/groups/_group.html.haml
+++ b/app/views/groups/_group.html.haml
@@ -6,14 +6,10 @@
         #{group.description}
     %ul.actions
       - if current_user.member_of?(group)
-        %li
-          = form_tag(group_membership_path(group, current_user.memberships.find_by_group_id(group.id)), :method => :delete) do
-            = submit_tag t(".links.leave", :default => "leave")
+        %li= button_to t(".links.leave", :default => "leave"), group_membership_path(group), :method => :delete
         %li= link_to t(".links.session", :default => "Session"), path_for_group_supervision(group)
         %li= link_to t(".links.chat", :default => "Chat"), group_chat_room_path(group)
         %li= link_to t(".links.edit", :default => "Edit"), edit_group_path(group.id)
         %li= link_to t(".links.delete", :default => "delete"), group_path(group.id), :method => :delete, :confirm => t(".confirmations.delete", :default => "You sure?")
       - else
-        %li
-          = form_tag(group_memberships_path(group), :method => :post) do
-            = submit_tag t(".links.join", :default => "join")
+        %li= button_to t(".links.join", :default => "join"), group_membership_path(group)
