added state to membership, made group invitable, added shoulda-matchers gem

--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -2,6 +2,7 @@
   = f.inputs do
     = f.input :name
     = f.input :description
+    = f.input :invitable
 
   = f.buttons do
     = f.commit_button
