--- a/app/views/groups/_navigation.html.haml
+++ b/app/views/groups/_navigation.html.haml
@@ -3,9 +3,11 @@
   %li= link_to t(".links.session", :default => "Session"), path_for_group_supervision(group)
   %li= link_to t(".links.chat", :default => "Chat"), group_chat_room_path(group)
   - if group.founder == current_user
+    - if group.invitable?
+      %li= link_to t(".links.invitations", :default => "Invitations"), group_invitations_path(group)
     %li= link_to t(".links.edit", :default => "Edit"), edit_group_path(group)
     %li= link_to t(".links.delete", :default => "delete"), group_path(group), :method => :delete, :confirm => t(".confirmations.delete", :default => "You sure?")
-- elsif current_user.pending_member_of?(group)
+- elsif current_user.invited_member_of?(group)
   %li= button_to t(".links.accept", :default => "accept"), accept_group_membership_path(group), :method => :put
   %li= button_to t(".links.reject", :default => "reject"), reject_group_membership_path(group), :method => :delete
 - elsif group.public?
