sending email with group invitation notification to registered user

--- a/app/views/user_mailer/group_invitation.html.erb
+++ b/app/views/user_mailer/group_invitation.html.erb
@@ -1,3 +1,7 @@
 Hello.
 You have been invited to <%= @membership.group.name %> group.
-You can register following this link: <%= new_user_url %>
+<% if @membership.user %>
+You can accept or reject this invitation at <%= groups_url %>
+<% else %>
+To accept invitation, you need to register first following this link: <%= new_user_url %>
+<% end %>
