--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -1,6 +1,25 @@
 %article
-  = link_to t(".links.edit", :default => "Edit"), edit_group_path(@group)
 
-  = render "users/list", :users => @group.members, :selected_user => @group.founder
+  %h3 Members
+  = render "users/list", :users => @group.active_members, :selected_user => @group.founder
+
+  - if @group.founder == current_user
+
+    %h3 Requested memberships
+    %ul
+      - @group.requested_memberships.each do |membership|
+        %li
+          .inline= "#{membership.user.name} <#{membership.email}>"
+          .inline= button_to t(".links.accept", :default => "accept"), owner_group_request_path(@group, membership), :method => :put
+          .inline= button_to t(".links.reject", :default => "reject"), owner_group_request_path(@group, membership), :method => :delete
+
+    %h3 Sent invitations
+    %ul
+      - @group.invited_memberships.each do |membership|
+        %li= membership.email
+
+    - if @group.invitable?
+      %h3 Invite person
+      = render "owner/invitations/form"
 
   = render "navigation", :group => @group
