moved some links from header navigation to home page

--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -81,6 +81,12 @@ a
       display: inline-block
       +horizontal-list
 
+nav#home
+  +horizontal-list
+  margin-bottom: 0.5em
+  ul
+    padding-left: 0
+
 #content
   +container
   +prepend-top
