--- a/app/views/pages/home_member.html.haml
+++ b/app/views/pages/home_member.html.haml
@@ -1,4 +1,10 @@
 %article.with_sidebar
+  %nav#home
+    %ul
+      %li= link_to t(".links.create_group", :default => "Create Group"), new_group_path
+      %li= link_to t(".links.supervisions", :default => "Supervisions"), supervisions_path
+      %li= link_to t(".links.settings", :default => "Settings"), edit_user_path(current_user)
+
   %header
     %h1= t(".latest_groups", :default => "Latest groups")
 
