--- a/app/views/supervisions/index.html.haml
+++ b/app/views/supervisions/index.html.haml
@@ -2,22 +2,10 @@
 
 %article
   %header
-    %h1= t(".heading", :default => "Supervisions list")
+    %h2= t(".heading", :default => "Your current supervisions")
 
-  - if @finished_supervisions.any?
-    %h2= t(".finished_supervisions", :default => "Finished supervisions")
-    - paginated_section(@finished_supervisions) do
-      %ul
-        - @finished_supervisions.each do |supervision|
-          %li
-            = link_to supervision_path(supervision) do
-              = t(".supervision", :default => "group: %{group} - %{date}", :group => supervision.group_name, :date => l(supervision.updated_at, :format => :short))
-            = supervision.topic_content
-
-  - if @current_supervisions.any?
-    %h2= t(".current_supervisions", :default => "Current supervisions")
     %ul
-      - @current_supervisions.each do |supervision|
+      - @supervisions.each do |supervision|
         %li
           = link_to supervision_path(supervision) do
             = t(".supervision", :default => "group: %{group} - %{date}", :group => supervision.group_name, :date => l(supervision.updated_at, :format => :short))
