--- a/app/views/chat_rooms/show.html.haml
+++ b/app/views/chat_rooms/show.html.haml
@@ -1,16 +1,3 @@
 - @title = t ".title", :group_name => @chat_room.group.name, :default => "%{group_name} Group Chat"
-
-%article.chat-room-part
-  %div[@chat_room]{ :data => { :token => @token } }
-    .messages_part
-      %ul.messages
-        - @chat_messages.reverse_each do |chat_message|
-          %li[chat_message]
-            %span.message-user= chat_message.user
-            %time{ :datetime => chat_message.created_at.getutc.iso8601 }= chat_message.created_at.to_s
-            \:
-            %span.message-content= chat_message.content
-    = form_for([@chat_room, ChatMessage.new], :remote => true) do |f|
-      = f.text_field :content
-      = submit_tag t(".submit", :default => "Submit")
-
+%article
+  = render "list"
