--- a/app/views/supervisions/show.html.haml
+++ b/app/views/supervisions/show.html.haml
@@ -14,19 +14,7 @@
     .members-part
       %ul.members-list
 
-    .chat-room-part
-      %div[@supervision.chat_room]{ :data => { :token => @token } }
-        .messages_part
-          %ul.messages
-            - @chat_messages.reverse_each do |chat_message|
-              %li[chat_message]
-                %span.message-user= chat_message.user
-                %time{ :datetime => chat_message.created_at.getutc.iso8601 }= chat_message.created_at.to_s
-                \:
-                %span.message-content= chat_message.content
-        = form_for([@supervision.chat_room, ChatMessage.new], :remote => true) do |f|
-          = f.text_field :content
-          = submit_tag ">>"
+    = render "chat_rooms/list"
 
   %div.supervision-content
     %section.topics_part
