--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -10,7 +10,7 @@
         = gravatar_for(user, :size => 30)
         = link_to(user, @group.founder)
         - if @group.founder == current_user
-          .inline= button_to("remove from group", owner_group_membership_path(@group, user), :method => :delete)
+          .inline= button_to("remove from group", founder_group_membership_path(@group, user), :method => :delete)
 
   - if @group.founder == current_user
 
@@ -20,8 +20,8 @@
         - @group.requested_memberships.each do |membership|
           %li
             .inline= "#{membership.user.name} <#{membership.email}>"
-            .inline= button_to t(".links.accept", :default => "accept"), owner_group_request_path(@group, membership), :method => :put
-            .inline= button_to t(".links.reject", :default => "reject"), owner_group_request_path(@group, membership), :method => :delete
+            .inline= button_to t(".links.accept", :default => "accept"), founder_group_request_path(@group, membership), :method => :put
+            .inline= button_to t(".links.reject", :default => "reject"), founder_group_request_path(@group, membership), :method => :delete
 
     - if @group.invited_memberships.any?
       %h3 Sent invitations
@@ -31,6 +31,6 @@
 
     - if @group.invitable?
       %h3 Invite person
-      = render "owner/invitations/form"
+      = render "founder/invitations/form"
 
   = render "navigation", :group => @group
