--- a/app/views/topics/_supervision_topics.html.haml
+++ b/app/views/topics/_supervision_topics.html.haml
@@ -1,7 +1,4 @@
-%section.topics_part
-  %header
-    %h1= t("supervisions.show.topics")
-
+%section.gathering_topics_part
   - if supervision.gathering_topics?
     %p.waiting= t("supervisions.show.topics_waiting")
 
