setup views in supervision for users by js

--- a/app/stylesheets/partials/_supervision.sass
+++ b/app/stylesheets/partials/_supervision.sass
@@ -179,6 +179,9 @@
     .head
       display: none
 
+  .for_problem_owner, .for_not_problem_owner
+    display: none
+
 #topics_index
   .list
     .topic
