added info about compiling sass files

--- a/app/stylesheets/partials/_chat_room.sass
+++ b/app/stylesheets/partials/_chat_room.sass
@@ -1,6 +1,5 @@
 .chat-room-part
   overflow: auto
-  .chat_room
   .messages_part
     border: 1px solid $primary-color-1
     height: 25em
@@ -22,5 +21,4 @@
     border: 1px solid $primary-color-1
     width: 80%
     &:focus
-      +box_shadow($primary-color-2, 0, 0, 5px)
-
+      +single-box-shadow($primary-color-2, 0, 0, 5px)
