--- a/app/stylesheets/partials/_supervision.sass
+++ b/app/stylesheets/partials/_supervision.sass
@@ -78,7 +78,7 @@
       width: 100%
       border: 1px solid $primary-color-1
       &:focus
-        +box_shadow($primary-color-2, 0, 0, 5px)
+        +single-box-shadow($primary-color-2, 0, 0, 5px)
 
   .supervision_statusbar
     +reset_box_model
