using shoulda-matchers from original repository

--- a/app/stylesheets/partials/_supervision.sass
+++ b/app/stylesheets/partials/_supervision.sass
@@ -62,7 +62,7 @@
     margin-top: 5px
     padding-left: 80px
 
-#supervisions_show, #topics_index
+#supervisions_show
   .content
     padding-bottom: 1em
     padding-right: 1em
@@ -186,4 +186,3 @@
   .list
     .topic
       +supervision-item-small
-
