gray user icon when idle

--- a/app/stylesheets/partials/_supervision.sass
+++ b/app/stylesheets/partials/_supervision.sass
@@ -136,6 +136,10 @@
         .name
           +ellipsis
 
+      .idle
+        color: gray
+        opacity: 0.4
+
   .chat-room-part
     width: 80%
 
