displaying dialog about idle status

--- a/app/views/supervisions/show.html.haml
+++ b/app/views/supervisions/show.html.haml
@@ -141,3 +141,6 @@
   %footer
     %div{:"data-show-in-state" => "finished"}
       = render "supervision_finished", :supervision => @supervision
+
+  #away-dialog-message
+    You will be removed from supervision after 1 minute. Are you there?
