group description is optional, hints for group labels

--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -1,7 +1,7 @@
 = semantic_form_for @group do |f|
   = f.inputs do
     = f.input :name
-    = f.input :description
+    = f.input :description, :required => false
     = f.input :invitable
 
   = f.buttons do
