renamed invtitable to closed group, added hint for closed checkbox

--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -2,7 +2,7 @@
   = f.inputs do
     = f.input :name
     = f.input :description, :required => false
-    = f.input :invitable
+    = f.input :closed
 
   = f.buttons do
     = f.commit_button
