reorganized header menu

--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -62,9 +62,10 @@ a
     ul
       display: inline-block
       +horizontal-list
-      +push-base
     a
       font-weight: bold
+    #personal_menu
+      float: right
 
 #page > footer
   +container
