--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,8 +3,10 @@
     %h1
       = gravatar_for(@user)
       = @user.name
+    - if signed_in? and @user == current_user
+      = link_to t(".edit", :default => "Edit"), edit_user_path(current_user)
 
-  %h2= t(".group_list_title", :user_name => @user.name, :default => "My groups")
+  %h2= t(".group_list_title", :user_name => @user.name, :default => "Member of groups")
   %ul.groups
     - @user.groups.each do |group|
       %li= link_to(group_name(group, @user), group_path(group))
