--- a/app/views/topics/_form.html.haml
+++ b/app/views/topics/_form.html.haml
@@ -2,3 +2,4 @@
   = f.text_area :content
   %p.inline-hints= t("topics.form.content_hint")
   = submit_tag t("topics.form.submit")
+  =link_to t("topics.form.create_empty"), supervision_topics_path(supervision, :format => :json), {:method => :post, :remote => true}
