--- a/app/views/groups/_navigation.html.haml
+++ b/app/views/groups/_navigation.html.haml
@@ -1,5 +1,5 @@
 - if current_user.active_member_of?(group)
-  %li= button_to t(".links.leave", :default => "leave"), group_membership_path(group), :method => :delete
+  %li= button_to t(".links.leave", :default => "leave"), group_membership_path(group), :method => :delete unless group.founder == current_user
   %li= link_to_group_supervision(t(".links.session", :default => "Session"), group)
   %li= link_to t(".links.chat", :default => "Chat"), group_chat_room_path(group)
   - if group.founder == current_user
