display chat window on group page

--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -34,3 +34,5 @@
       = render "founder/invitations/form"
 
   = render "navigation", :group => @group
+  .mini_chat
+    = render "chat_rooms/list"
