--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -3,36 +3,37 @@
   %h3 Founder
   = gravatar_for(@group.founder, :size => 30)
   = link_to(@group.founder.name, @group.founder)
-  %h3 Members
-  %ul.users
-    - @group.active_members.without(@group.founder).each do |user|
-      %li
-        = gravatar_for(user, :size => 30)
-        = link_to(user, @group.founder)
-        - if @group.founder == current_user
-          .inline= button_to("remove from group", founder_group_membership_path(@group, user), :method => :delete)
+  .group_content
+    %h3 Members
+    %ul.users
+      - @group.active_members.without(@group.founder).each do |user|
+        %li
+          = gravatar_for(user, :size => 30)
+          = link_to(user, @group.founder)
+          - if @group.founder == current_user
+            .inline= button_to("remove from group", founder_group_membership_path(@group, user), :method => :delete)
 
-  - if @group.founder == current_user
+    - if @group.founder == current_user
 
-    - if @group.requested_memberships.any?
-      %h3 Requested memberships
-      %ul
-        - @group.requested_memberships.each do |membership|
-          %li
-            .inline= "#{membership.user.name} <#{membership.email}>"
-            .inline= button_to t(".links.accept", :default => "accept"), founder_group_request_path(@group, membership), :method => :put
-            .inline= button_to t(".links.reject", :default => "reject"), founder_group_request_path(@group, membership), :method => :delete
+      - if @group.requested_memberships.any?
+        %h3 Requested memberships
+        %ul
+          - @group.requested_memberships.each do |membership|
+            %li
+              .inline= "#{membership.user.name} <#{membership.email}>"
+              .inline= button_to t(".links.accept", :default => "accept"), founder_group_request_path(@group, membership), :method => :put
+              .inline= button_to t(".links.reject", :default => "reject"), founder_group_request_path(@group, membership), :method => :delete
 
-    - if @group.invited_memberships.any?
-      %h3 Sent invitations
-      %ul
-        - @group.invited_memberships.each do |membership|
-          %li= membership.email
+      - if @group.invited_memberships.any?
+        %h3 Sent invitations
+        %ul
+          - @group.invited_memberships.each do |membership|
+            %li= membership.email
 
-    - if @group.closed?
-      %h3 Invite person
-      = render "founder/invitations/form"
+      - if @group.closed?
+        %h3 Invite person
+        = render "founder/invitations/form"
 
-  = render "navigation", :group => @group
+    = render "navigation", :group => @group
   .mini_chat
     = render "chat_rooms/list"
