--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -179,6 +179,18 @@ a.signup_button
   margin-right: auto
   overflow: auto
 
+#group
+  .small
+    font-size: small
+  h1
+    margin: 0
+  #active_supervision
+    background-color: #80FF00
+    text-align: center
+    width: 50%
+    padding: 2px
+    margin: 5px auto
+
 .profile img.gravatar
   border: 1px solid #999
   margin-bottom: -15px
