reorganized group show page

--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -190,6 +190,16 @@ a.signup_button
     width: 50%
     padding: 2px
     margin: 5px auto
+    border: 1px solid black
+
+  #members
+    +no-bullets
+    ul
+      padding: 0
+
+  #group_content
+    width: 60%
+    float: left
 
 .profile img.gravatar
   border: 1px solid #999
@@ -273,8 +283,3 @@ div.user_info
 
 .inline
   display: inline-block
-
-/* CSS for group page
-.group_content
-  width: 60%
-  float: left
