moved group managment actions to founder namespace

--- a/app/views/founder/groups/_form.html.haml
+++ b/app/views/founder/groups/_form.html.haml
@@ -1,4 +1,4 @@
-= semantic_form_for @group do |f|
+= semantic_form_for [:founder, @group] do |f|
   = f.inputs do
     = f.input :name
     = f.input :description, :required => false
