--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -283,3 +283,16 @@ div.user_info
 
 .inline
   display: inline-block
+
+/* CSS for groups list
+
+.left_col, .right_col
+  width: 50%
+  .group_brief
+    +column(($blueprint-grid-columns / 2) - 1, true)
+    .inner
+      +column(($blueprint-grid-columns / 2) - 2, true)
+.left_col
+  float: left
+.right_col
+  float: right
