--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,6 +1,17 @@
 %article
-  = render @groups
-
-  .new= link_to t(".new_group", :default => "Create Group"), new_founder_group_path
-  - if @groups.empty?
-    %p= t(".no_groups", :default => "There are no groups here.")
+  %h1 Groups
+  .left_col
+    %h2 Available groups
+    = t(".groups_hint", :default => "Open groups you can join right away, closed groups you request membership and you have to wait for the group founder to approve your request.")
+    =form_tag all_groups_path, :method => :get, :remote => true do
+      =label_tag :filter
+      =select_tag :filter, options_for_select(@filters.map{|k| [t("groups.filters.#{k}"), k ] }, params[:filter] )
+      =submit_tag "Filter"
+      Direction:
+      =link_to t(".directions.asc", :default => "Ascending"), {:direction => "asc"}, {:remote => true, :id => "direction"}
+      .groups_list= render @groups
+      = will_paginate @groups
+  .right_col
+    %h2 Go to Your groups
+    = render @user_groups
+    .new= link_to t(".new_group", :default => "Create new Group"), new_founder_group_path
