make html more semantically correct

--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -286,13 +286,13 @@ div.user_info
 
 /* CSS for groups list
 
-.left_col, .right_col
+section#available_groups, section#user_groups
   width: 50%
   .group_brief
     +column(($blueprint-grid-columns / 2) - 1, true)
     .inner
       +column(($blueprint-grid-columns / 2) - 2, true)
-.left_col
+section#available_groups
   float: left
-.right_col
+section#user_groups
   float: right
