Reorganize profile page

--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -286,13 +286,13 @@ div.user_info
 
 /* CSS for groups list
 
-section#available_groups, section#user_groups
+section#available_groups, section#user_groups, section#avatar_settings
   width: 50%
   .group_brief
     +column(($blueprint-grid-columns / 2) - 1, true)
     .inner
       +column(($blueprint-grid-columns / 2) - 2, true)
-section#available_groups
+section#available_groups, section#avatar_settings
   float: left
 section#user_groups
   float: right
